RESOLVED FIXED73954
REGRESSION (r97745): Transitions don't work on links
https://bugs.webkit.org/show_bug.cgi?id=73954
Summary REGRESSION (r97745): Transitions don't work on links
@fregante
Reported 2011-12-06 15:17:58 PST
Properties are not transitioned on links and their children. Chrome 17.0.942.0 dev/Mac
Attachments
repro (without jquery/jsfiddle) (744 bytes, text/html)
2011-12-07 11:00 PST, Tim Horton
no flags
patch (16.12 KB, patch)
2011-12-13 17:02 PST, Antti Koivisto
kling: review+
kling: commit-queue-
Tim Horton
Comment 1 2011-12-06 15:19:50 PST
I've bisected this and it looks like http://trac.webkit.org/changeset/97745/trunk might be the culprit.
Tim Horton
Comment 2 2011-12-07 11:00:55 PST
Created attachment 118233 [details] repro (without jquery/jsfiddle)
Antti Koivisto
Comment 3 2011-12-07 11:38:20 PST
Thanks, I'll take a look.
Antti Koivisto
Comment 4 2011-12-08 06:34:14 PST
The test case seems to work fine in Safari with ToT WebKit.
Tim Horton
Comment 5 2011-12-08 15:33:16 PST
(In reply to comment #4) > The test case seems to work fine in Safari with ToT WebKit. Really? On Safari + WebKit r102386, I get a sharp transition on the right element (the link with a target), and a smooth one on the left element (the link without a target).
Antti Koivisto
Comment 6 2011-12-08 15:44:25 PST
(In reply to comment #5) > Really? On Safari + WebKit r102386, I get a sharp transition on the right element (the link with a target), and a smooth one on the left element (the link without a target). After a few retries it suddenly it started happening. Strange. Anyway, I see it now.
Antti Koivisto
Comment 7 2011-12-13 17:02:04 PST
Antti Koivisto
Comment 8 2011-12-13 17:03:09 PST
(In reply to comment #6) > After a few retries it suddenly it started happening. Strange. Anyway, I see it now. It was actually having to click the link so it became visited.
Andreas Kling
Comment 9 2011-12-15 21:57:23 PST
Comment on attachment 119111 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=119111&action=review > Source/WebCore/rendering/style/RenderStyle.h:1631 > + const Color& visitedLinkColumnRuleColor() const { return rareNonInheritedData->m_multiCol->m_visitedLinkColumnRuleColor; } > + const Color& visitedLinkTextEmphasisColor() const { return rareInheritedData->visitedLinkTextEmphasisColor; } > + const Color& visitedLinkTextFillColor() const { return rareInheritedData->visitedLinkTextFillColor; } > + const Color& visitedLinkTextStrokeColor() const { return rareInheritedData->visitedLinkTextStrokeColor; } We should cover these colors in the layout test as well.
Antti Koivisto
Comment 10 2011-12-18 15:49:03 PST
trac.webkit.org/changeset/103192
Note You need to log in before you can comment on or make changes to this bug.